Updated MayCentral, SocialCart and SideHustle projects features and log

--- a/_includes/memories.html
+++ b/_includes/memories.html
@@ -19,7 +19,8 @@
 						<dt>Projects:</dt>
 						<dd>Wordpress website</dd>
 					</dl>
-					<a href="#" class="btn btn-primary waves-effect waves-light">Read more</a>
+					<a href="{{site.baseurl}}/portfolio.html" class="btn btn-primary waves-effect waves-light">Hire me</a>
+					<a href="{{site.baseurl}}/portfolio.html" class="btn btn-primary waves-effect waves-light">Buy me coffee</a>
 				</div>
 				<!--/.Card content-->
 			</div>
