Added portfolio down load links and Disabled unresponsive footer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -101,21 +101,21 @@ title: Default
 	</div>
 	<!-- /#wrapper -->
 	<!--Footer-->
-	<footer id="footer" class="row page-footer orange ">
+	<!-- <footer id="footer" class="row page-footer orange "> -->
 		<!--Footer Links-->
-		<div class="row" style="text-align: center;">
-			<h5 class="title">Quotes</h5>
-			<div class="blockquote blockquote-footer" style="color: #ffffff; font-size: 22px;"><p>Time is money</p></div>
-		</div>
+		<!-- <div class="row" style="text-align: center;"> -->
+			<!-- <h5 class="title">Quotes</h5> -->
+			<!-- <div class="blockquote blockquote-footer" style="color: #ffffff; font-size: 22px;"><p>Time is money</p></div> -->
+		<!-- </div> -->
 		<!--/.Footer Links-->
 		<!--Copyright-->
-		<div class="footer-copyright">
-			<div class="container-fluid">
-				© 2016 Copyright: <a href="{{site.baseurl}}/">Joseph Kamau</a>
-			</div>
-		</div>
+		<!-- <div class="footer-copyright"> -->
+			<!-- <div class="container-fluid"> -->
+				<!-- © 2016 Copyright: <a href="{{site.baseurl}}/">Joseph Kamau</a> -->
+			<!-- </div> -->
+		<!-- </div> -->
 		<!--/.Copyright-->
-	</footer>
+	<!-- </footer> -->
 	
 	
 
