Updated MAYCentral README

--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,3 +1,2 @@
 <div class="fb-comments" data-href="https://pistolla.github.io/bitjosef/projects/2018/02/10/maycentral.html" data-width="700" data-numposts="1000"></div>
-<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Facebbok plugin.</a></noscript>
-<a href="http://disqus.com" class="dsq-brlink">blog comments powered by <span class="logo-facebook">Facebbok plugin</span></a>
+<noscript>Please enable JavaScript to view the <a href="http://facebook.com">comments powered by Facebook comments plugin.</a></noscript>
