Updated MAYCentral exe download link

--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,2 +1,2 @@
-<div class="fb-comments" data-href="https://pistolla.github.io/bitjosef/projects/2018/02/10/maycentral.html" data-width="700" data-numposts="1000"></div>
+<div class="fb-comments" data-href="{{ site.baseurl }}{{ page.url }}" data-width="700" data-numposts="100"></div>
 <noscript>Please enable JavaScript to view the <a href="http://facebook.com">comments powered by Facebook comments plugin.</a></noscript>
